--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "google-spreadsheet": "^3.3.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
