--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "google-spreadsheet": "^3.3.0",
+    "moment": "^2.29.3",
     "request": "^2.88.2"
   },
   "devDependencies": {
